# synthertest

./: .gitignore  ACTUAL_TEST_RESULTS.md  AI_PRESET_DEMO.html  ANDROID_TESTING_GUIDE.md  CLAUDE.md  CONNECT_PHONE.md  FREE_DEPLOYMENT_GUIDE.md  KEYBOARD_ACCURACY_TEST.md  LLM_INTEGRATION_SUMMARY.md  MONETIZATION_SETUP.md  QUICKSTART.md  RESTART_PROMPT.md  ULTIMATE_DEVELOPMENT_PLAN.md  VISUALIZER_INTEGRATION_TEST.md  WHOLE_APP_CHECKLIST.md  XY_PAD_OPTIMIZATION.md  deploy.sh  firebase.json  netlify.toml  pubspec.yaml  readme.md.md  run_real_tests.sh  serve_local.sh  test_android.bat  test_android.sh
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  audio_platform_oboe.cpp
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/com/domusgpt/sound_synthesizer/: AudioChannelHandler.kt  MainActivity.kt
assets/visualizer/: flutter-integration.html  index-flutter.html
backup/morph-ui-implementation/: README.md  SESSION_SUMMARY.md  TEST_RESULTS.md  advanced_gesture_recognizer.dart  collapsible_ui_controller.dart
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: CMakeLists.txt  GeneratedPluginRegistrant.m  Info.plist  audio_platform_coreaudio.mm
lib/: app.dart  main.dart
lib/config/: api_config.dart
lib/core/: audio_backend.dart  audio_backend_desktop.dart  audio_backend_stub.dart  audio_service.dart  firebase_manager.dart  granular_parameters.dart  native_audio_backend.dart  native_audio_backend_android.dart  native_audio_backend_ios.dart  parameter_bridge.dart  parameter_definitions.dart  platform_audio_backend.dart  synth_engine_bindings.dart  synth_engine_bindings_generated.dart  synth_engine_bindings_native.dart  synth_engine_bindings_simple.dart  synth_engine_bindings_web.dart  synth_parameters.dart  web_audio_backend.dart
lib/design_system/components/: performance_mode_switcher.dart
lib/features/ads/: ad_manager.dart
lib/features/granular/: granular_controls_widget.dart
lib/features/keyboard/: keyboard_widget.dart
lib/features/llm_presets/: cloudflare_service.dart  cohere_service.dart  groq_service.dart  llm_preset_service.dart  llm_preset_service_stub.dart  llm_preset_service_web.dart  llm_preset_widget.dart  llm_service_unified.dart  mistral_service.dart  openrouter_service.dart  replicate_service.dart  together_ai_service.dart
lib/features/microphone_input/: mic_input_widget.dart  mic_service.dart  mic_service_platform.dart  mic_service_web.dart
lib/features/premium/: premium_manager.dart  premium_upgrade_screen.dart
lib/features/presets/: preset_dialog.dart  preset_manager.dart  preset_manager_platform.dart  preset_manager_web.dart
lib/features/shared_controls/: control_knob_widget.dart  control_panel_widget.dart
lib/features/visualizer_bridge/: platform_webview_config.dart  visualizer_bridge_widget.dart  visualizer_bridge_widget_stub.dart  visualizer_bridge_widget_web.dart  visualizer_stub.dart  visualizer_web.dart
lib/features/wavetable/: wavetable_controls_widget.dart
lib/features/xy_pad/: xy_pad.dart  xy_pad_widget.dart
lib/test/: test_audio_engine.dart
lib/utils/: audio_ui_sync.dart  audio_utils.dart  file_utils.dart  platform_check.dart  ui_performance.dart  web_audio_fix.dart  web_audio_fix_stub.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/ephemeral/: generated_config.cmake
linux/flutter/ephemeral/.plugin_symlinks/: connectivity_plus  device_info_plus  package_info_plus  path_provider_linux  shared_preferences_linux
native/: CMakeLists.txt  test_audio  test_audio.cpp
native/include/: synth_engine_api.h
native/src/: ffi_bridge.cpp  synth_engine.cpp  synth_engine.h
native/src/audio_platform/: audio_platform_rtaudio.h
native/src/granular/: granular_synth.h
native/src/synthesis/: filter.h
native/src/wavetable/: wavetable.h  wavetable_manager.h  wavetable_oscillator_impl.h
native_audio - Copy/: CMakeLists.txt
native_audio - Copy/src/: audio_platform.cpp  audio_platform.h  audio_platform_rtaudio.cpp  delay.h  envelope.h  ffi_bridge.h  oscillator.h  reverb.h  synth_engine.cpp
native_audio - Copy/src/granular/: grain.h
native_audio - Copy/src/wavetable/: wavetable_oscillator_impl.h
olf files i doubt we need/: ACTIVATION_GUIDE.md  CLAUDE_BUILD.md  CLAUDE_NATIVE.md  CLAUDE_UI.md  CLAUDE_VIZ.md  COORDINATION_PROTOCOL.md  PHASE_1_SUMMARY.md  POST_RESTART_ANALYSIS_GUIDE.md  PROJECT_STATUS.md  README.md  SESSION_RESUMPTION_GUIDE.md  WORKING_SYNTH.html  claude.md.md  ffigen.yaml  test-visualizer.html  test_llm_integration.dart  visualizer-standalone-test.html
scripts/: build_flutter.sh  build_native.sh
test/: audio_integration_test.dart  complete_app_test.dart  final_integration_suite.dart  llm_preset_test.dart  parameter_sync_test.dart  preset_system_test.dart  test_visualizer_integration.dart  visualizer_integration_test.dart  widget_test.dart
web/: console-polyfill.js  index.html  manifest.json
web/assets/: index-flutter.html
web/assets/js/: flutter-bridge.js
